# ai-me

./: .gitignore  README.md  pyproject.toml
src/ai_me/: __init__.py  claude.py  cli.py  git.py
src/ai_me/agents/: __init__.py  code_review.py  commit.py  pull_request.py
src/claude_me/: __init__.py  claude.py  cli.py  git.py  shell.py
src/claude_me/agents/: commit.py  pull_request.py
